smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/use/use-empty-array.smithy
// Parse error at line 4, column 23 near `]`
$version: "0.1.0"

use shape smithy.api#[]
